<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edtxt_background"
    android:elevation="10dp"
    android:gravity="center_horizontal"

    android:orientation="horizontal">

    <Button
        android:id="@+id/save_btn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="@drawable/button_selector"
        android:text="@string/save"
        android:textColor="@color/colorPrimary" />


    <Button
        android:id="@+id/submit_btn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/save_btn"
        android:layout_toRightOf="@id/save_btn"
        android:background="@drawable/button_layout"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/close_btn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/button_layout"
        android:text="@string/close"
        android:textColor="@android:color/white"
        android:visibility="gone" />

</RelativeLayout>