<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".activites.forgotPassword">
    <include
        layout="@layout/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    </include>

    <Button
        android:id="@+id/recover_btn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_text"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_layout"
        android:text="@string/recover_password"


        android:textColor="@android:color/white" />


    <LinearLayout
        android:id="@+id/bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp">


        <com.standardyze.customViews.CustomTextViewBook
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_txt"
            android:textColor="#3B4656"
            android:textSize="15sp" />

        <com.standardyze.customViews.CustomTextViewMedium
            android:id="@+id/reg_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/login_text"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/forgotLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="15dp"

        >

        <com.standardyze.customViews.CustomTextViewBold
            android:id="@+id/forgotpasswordtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/forgot_password"
            android:textColor="#434354"
            android:textSize="20sp" />

        <com.standardyze.customViews.CustomTextViewBook
            android:id="@+id/forgotText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgotpasswordtxt"
            android:layout_margin="5dp"
            android:text="@string/forgot_password_txt"
            android:textColor="#474748"
            android:textSize="13sp" />


    </RelativeLayout>


   <!-- <com.github.florent37.materialtextfield.MaterialTextField
        android:id="@+id/verification"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotLayout"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="4dp"
        android:textColorHint="@color/colorPrimary"
        app:mtf_cardCollapsedHeight="4dp"
        app:mtf_hasFocus="false"
        app:mtf_image="@drawable/email"
        app:mtf_labelColor="@color/colorPrimary">-->

        <EditText

            android:id="@+id/edtxt_forgot"
            android:layout_below="@id/forgotLayout"
            android:padding="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:ems="10"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="#333"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:textColorHint="@color/colorAccent"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableLeft="@drawable/email" />

  <!--  </com.github.florent37.materialtextfield.MaterialTextField>-->
</RelativeLayout>