<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activites.newPassword">
    <include
        layout="@layout/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    </include>

    <Button
        android:id="@+id/update_btn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="108dp"
        android:background="@drawable/button_layout"
        android:text="@string/update"
        android:textColor="@android:color/white" />




    <RelativeLayout
        android:id="@+id/passLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPassLayout"
        android:layout_margin="5dp"
        >

        <EditText
            android:id="@+id/newPass_edtxt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/newPassword_txt"
            android:inputType="textPassword"
            android:maxLines="1"
            android:ems="10"
            android:layout_margin="10dp"
            android:textColor="#333"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:textColorHint="@color/colorPrimary"
            android:textSize="15sp"
            android:drawableLeft="@drawable/password" />


        <EditText
            android:id="@+id/confrm_edtxt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="@string/confrmPass"
            android:layout_below="@id/newPass_edtxt"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:textColor="#333"
            android:textColorHint="@color/colorPrimary"
            android:textSize="15sp"
            android:drawableLeft="@drawable/password" />

        <!-- </com.github.florent37.materialtextfield.MaterialTextField>-->

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/newPassLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="15dp">

        <com.standardyze.customViews.CustomTextViewBold
            android:id="@+id/newPassword_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:text="@string/newPassword_txt"
            android:textColor="@android:color/black" />

        <com.standardyze.customViews.CustomTextViewBook
            android:id="@+id/newPassPlain_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/newPassword_txt"
            android:layout_margin="5dp"
            android:text="@string/password_txt"
            android:textColor="#474748" />

    </RelativeLayout>


</RelativeLayout>