<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.account_setting">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="13dp"
        app:cardElevation="15dp"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/summary">


            <ImageView
                android:id="@+id/client_logo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="#fff"
                android:src="@drawable/frontlogo" />


            <com.standardyze.customViews.CustomTextViewMedium
                android:id="@+id/client_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/client_logo"
                android:layout_toRightOf="@id/client_logo"
                android:text="@string/client_name"
                android:textColor="#474748"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/userLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/client_name"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/client_logo"
                android:layout_toRightOf="@id/client_logo"
                android:orientation="horizontal">

                <com.standardyze.customViews.CustomTextViewMedium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/username"
                    android:textColor="#403A54"
                    android:textSize="14sp" />

                <com.standardyze.customViews.CustomTextViewBook
                    android:id="@+id/username_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="loremIpsum"
                    android:textColor="#737084"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userLayout"
                android:layout_toEndOf="@id/client_logo"
                android:layout_toRightOf="@id/client_logo">


                <com.standardyze.customViews.CustomTextViewMedium

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/email_txt"
                    android:textColor="#403A54"
                    android:textSize="14sp" />

                <com.standardyze.customViews.CustomTextViewBook
                    android:id="@+id/useremail_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    android:text="loremIpsumddddddddddddddddddddddddddddddnnnnnnnnn
                    hhddd"
                    android:textColor="#737084"
                    android:textSize="13sp"

                    />
            </LinearLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/cardView"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <com.standardyze.customViews.CustomTextViewBook
            android:id="@+id/updatePass_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/update_password"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/passLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_margin="5dp">

        <com.standardyze.customViews.CustomTextViewMedium
            android:id="@+id/current_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:text="@string/current_pssw"
            android:textColor="#474748"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/currentpass_edtxt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_txt"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="14sp" />

        <com.standardyze.customViews.CustomTextViewMedium
            android:id="@+id/newPass_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentpass_edtxt"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:text="@string/newPassword_txt"
            android:textColor="#474748"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/newPass_edtxt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/newPass_txt"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="14sp" />

        <com.standardyze.customViews.CustomTextViewBook
            android:id="@+id/info_txt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/newPass_edtxt"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:drawableLeft="@drawable/info_ic"
            android:drawablePadding="8dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/info"
            android:textColor="#474748"
            android:textSize="9sp" />

        <com.standardyze.customViews.CustomTextViewMedium
            android:id="@+id/confrm_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_txt"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/confrmPass"
            android:textColor="#474748"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/confrm_edtxt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/confrm_txt"
            android:layout_marginBottom="4dp"
            android:ems="10"

            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="14sp" />


    </RelativeLayout>

    <Button
        android:id="@+id/update_btn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_layout"
        android:text="@string/update_password"
        android:textColor="@android:color/white" />
</RelativeLayout>